# cosmic2bed

./: .gitignore  LICENSE  README.md  pyproject.toml
cosmic2bed/: convert.py
cosmic2bed/demo/infiles/: Cosmic_MutantCensus_v100_GRCh38.tsv  Cosmic_NonCodingVariants_v100_GRCh38.tsv
cosmic2bed/demo/outfiles/: Cosmic_MutantCensus_v100_GRCh38_sorted.bb  Cosmic_MutantCensus_v100_GRCh38_sorted.bed  Cosmic_NonCodingVariants_v100_GRCh38.bed  Cosmic_NonCodingVariants_v100_GRCh38_sorted.bb  Cosmic_NonCodingVariants_v100_GRCh38_sorted.bed
cosmic2bed/outfiles/: Cosmic_CancerGeneCensus_v100_GRCh38.bed  Cosmic_MutantCensus_v100_GRCh38.bb  Cosmic_MutantCensus_v100_GRCh38.bed
cosmic2bed/resources/: Cosmic_CancerGeneCensus_v100_GRCh38.tsv  GRCh37.chrom.sizes.txt  GRCh38.chrom.sizes.txt  bedPlus_definitions.as
